add base class. add simple stcg test. coarse grained implementation complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,9 @@
         "utility": "cpp",
         "xmemory": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "mutex": "cpp",
+        "system_error": "cpp"
     },
     "makefile.configureOnOpen": true
 }
